--- a/index.html
+++ b/index.html
@@ -3227,16 +3227,46 @@ It was a pleasure to learn and grow alongside you all as we teamed up to build t
           img: "Me/antifragile.jpg",
         },
         {
-          title: "Drama",
+          title: "Whiplash",
           artist: "Aespa",
           src: "mp4/aespa.mp4",
-          img: "Me/drama.png",
+          img: "Me/whiplash.png",
+        },
+        {
+          title: "We Go Up",
+          artist: "BABYMONSTER",
+          src: "mp4/wegoup.mp4",
+          img: "Me/wegoup.webp",
         },
         {
           title: "SHEESH",
           artist: "BABYMONSTER",
           src: "mp4/baemon.mp4",
           img: "Me/baemon.webp",
+        },
+        {
+          title: "Jump",
+          artist: "BLACKPINK",
+          src: "mp4/jump.mp4",
+          img: "Me/jump.jpg",
+        },
+        {
+          title: "Always (Enhypen Jay Cover)",
+          artist: "Bon Jovi",
+          src: "mp4/jay.mp4",
+          img: "Me/jay2.jpg",
+        },
+         {
+          title: "Drama",
+          artist: "Aespa",
+          src: "mp4/drama.mp4",
+          img: "Me/drama.png",
+        },
+         {
+          title: "Rising Sun (Boys2Planet)",
+          artist: "TVXQ",
+          src: "mp4/b2p.mp4",
+          img: "Me/b2p.png",
         }
       ];
 
